[#2698] Journal Search Page Search Box Location
Adjust search box location down so that it does not cover text above
it. closes #2698

Stashing for now

--- a/primo-explore/custom/01NWU_INST-HSLV/css/custom1.css
+++ b/primo-explore/custom/01NWU_INST-HSLV/css/custom1.css
@@ -1785,3 +1785,7 @@ md-card.default-card md-card-title#get-help-title {
   margin-top:0px;
   padding-left: 3em;
 }
+
+prm-atoz-search-bar {
+  padding-top: 5rem;
+}
