Add Bart's css changes to facets

--- a/primo-explore/custom/01NWU_INST-HSLV/css/custom1.css
+++ b/primo-explore/custom/01NWU_INST-HSLV/css/custom1.css
@@ -1802,3 +1802,8 @@ prm-atoz-search-bar {
 #libchat_button a:hover{
   box-shadow: none;
 }
+
+/* Set the facets font to normal */
+.facet-title-row .text-number-space {
+  font-weight: normal;
+}
